[package]
name = "net_login"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
build = "build.rs"

[build-dependencies]
winres = "0.1"

[dependencies]
native-windows-gui = "1.0.12"
native-windows-derive = "1.0.3"
serde_json = "1.0.79"
winreg = "0.10.1"
base64 = "0.12.1"
notify-rust = "4"
rust-crypto = "^0.2"
serde = { version = "1.0", features = ["derive"] }
minreq = { version = "2.8.1", features = ["punycode"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
debug = false
strip = true